--- a/index.html
+++ b/index.html
@@ -46,16 +46,38 @@
         </div>
     </nav>
 </header>
-    <main></main>
+    <main>
+        <section class="container px-5">
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="../img/POKEDEX 1.jpg" class="d-block w-100 Slider" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="../img/POKEDEX 2.jpg" class="d-block w-100 Slider" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="../img/POKEDEX 3.jfif" class="d-block w-100 Slider" alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+        </section>
     </main>
     <footer class="bg-dark pb-2">
-     <div>
-        <!-- corregir esto -->
-        <hr>
-        <br>
-        <br>
-        <br>
-        <br>
+     <div>     
     <p class="text-light text-center pt-3 style-6 style-6:hover">&copy; Todos los derechos reservados</p>
     </div>
     </footer>
