--- a/index.html
+++ b/index.html
@@ -74,6 +74,130 @@
                   <span class="visually-hidden">Next</span>
                 </button>
               </div>
+              <section class="row">
+                <aside class="col-12 col-md-6 col-lg-3 my-3">
+                    <div class="card">
+                        <img  src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/001.png" class="card-img-top w-100 text-center">
+                        <div class="card-body">
+                            <h5 class="text-secondary fs-6">N.°001</h5>
+                          <h5 class="card-title">Bulbasaur</h5>
+                          <div>
+                              <span class="badge colorVerde">planta</span>
+                              <span class="badge colorVioleta">veneno</span>
+                            </div>  
+                          <a href="https://www.pokemon.com/el/pokedex/" class="btn btn-primary mt-3">Ver detalle</a>
+                        </div>
+                      </div>
+                </aside>
+                <aside class="col-12 col-md-6 col-lg-3 my-3">
+                    <div class="card">
+                        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/002.png" class="card-img-top w-100 text-center">
+                        <div class="card-body">
+                            <h5 class="text-secondary fs-6">N.°002</h5>
+                          <h5 class="card-title">Ivysaur</h5>
+                          <div>
+                              <span class="badge colorVerde">planta</span>
+                              <span class="badge colorVioleta">veneno</span>
+                            </div>  
+                          <a href="https://www.pokemon.com/el/pokedex/" class="btn btn-primary mt-3">Ver detalle</a>
+                        </div>
+                      </div>
+                </aside>
+                <aside class="col-12 col-md-6 col-lg-3 my-3">
+                    <div class="card">
+                        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/003.png" class="card-img-top w-100 text-center">
+                        <div class="card-body">
+                            <h5 class="text-secondary fs-6">N.°003</h5>
+                          <h5 class="card-title">Venusaur</h5>
+                          <div>
+                              <span class="badge colorVerde">planta</span>
+                              <span class="badge colorVioleta">veneno</span>
+                            </div>  
+                          <a href="https://www.pokemon.com/el/pokedex/" class="btn btn-primary mt-3">Ver detalle</a>
+                        </div>
+                      </div>
+                </aside>
+                <aside class="col-12 col-md-6 col-lg-3 my-3">
+                    <div class="card">
+                        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/004.png" class="card-img-top w-100 text-center">
+                        <div class="card-body">
+                            <h5 class="text-secondary fs-6">N.°004</h5>
+                          <h5 class="card-title">Charmander</h5>
+                          <div>
+                              <span class="badge colorNaranja">Fuego</span>
+                            </div>  
+                          <a href="https://www.pokemon.com/el/pokedex/" class="btn btn-primary mt-3">Ver detalle</a>
+                        </div>
+                      </div>
+                </aside>
+                <aside class="col-12 col-md-6 col-lg-3 my-3">
+                    <div class="card">
+                        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/005.png" class="card-img-top w-100 text-center">
+                        <div class="card-body">
+                            <h5 class="text-secondary fs-6">N.°004</h5>
+                          <h5 class="card-title">Charmeleon</h5>
+                          <div>
+                              <span class="badge colorNaranja">Fuego</span>
+                            </div>  
+                          <a href="https://www.pokemon.com/el/pokedex/" class="btn btn-primary mt-3">Ver detalle</a>
+                        </div>
+                      </div>
+                </aside>
+                <aside class="col-12 col-md-6 col-lg-3 my-3">
+                    <div class="card">
+                        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/006.png" class="card-img-top w-100 text-center">
+                        <div class="card-body">
+                            <h5 class="text-secondary fs-6">N.°004</h5>
+                          <h5 class="card-title">Charizard</h5>
+                          <div>
+                              <span class="badge colorNaranja">Fuego</span>
+                              <span class="badge bg-secondary">Volador</span>
+                            </div>  
+                          <a href="https://www.pokemon.com/el/pokedex/" class="btn btn-primary mt-3">Ver detalle</a>
+                        </div>
+                      </div>
+                </aside>
+                <aside class="col-12 col-md-6 col-lg-3 my-3">
+                    <div class="card">
+                        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/007.png" class="card-img-top w-100 text-center">
+                        <div class="card-body">
+                            <h5 class="text-secondary fs-6">N.°004</h5>
+                          <h5 class="card-title">Squirtle</h5>
+                          <div>
+                              <span class="badge bg-primary">Agua</span>
+                            </div>  
+                          <a href="https://www.pokemon.com/el/pokedex/" class="btn btn-primary mt-3">Ver detalle</a>
+                        </div>
+                      </div>
+                </aside>
+                <aside class="col-12 col-md-6 col-lg-3 my-3">
+                    <div class="card">
+                        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/010.png" class="card-img-top w-100 text-center">
+                        <div class="card-body">
+                            <h5 class="text-secondary fs-6">N.°004</h5>
+                          <h5 class="card-title">Caterpie</h5>
+                          <div>
+                              <span class="badge colorVerde">Bicho</span>
+                            </div>  
+                          <a href="https://www.pokemon.com/el/pokedex/" class="btn btn-primary mt-3">Ver detalle</a>
+                        </div>
+                      </div>
+                </aside>
+                <aside class="col-12 col-md-6 col-lg-3 my-3">
+                    <div class="card">
+                        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/012.png" class="card-img-top w-100 text-center">
+                        <div class="card-body">
+                            <h5 class="text-secondary fs-6">N.°004</h5>
+                          <h5 class="card-title">Butterfree</h5>
+                          <div>
+                              <span class="badge colorVerde">Bicho</span>
+                              <span class="badge bg-secondary">Volador</span>
+                            </div>  
+                          <a href="https://www.pokemon.com/el/pokedex/" class="btn btn-primary mt-3">Ver detalle</a>
+                        </div>
+                      </div>
+                </aside>
+            </section>
         </section>
     </main>
     <footer class="bg-dark pb-2">
