--- a/pages/Bulbasaur.html
+++ b/pages/Bulbasaur.html
@@ -1,62 +1,133 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Pagina Pokemon" />
-    <meta name="keywords" content="Pokemon, Pokedex, Pokebola, Pikachu, Bulbasaur"/>
-    <meta name="author" content="Nicolas Gomez Marigliano, Jose Luis Gomez Marigliano, Gonzalo Gallardo, Florencia Cane" />
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
-    <link rel="stylesheet" href="./css/style.css">
+    <meta
+      name="keywords"
+      content="Pokemon, Pokedex, Pokebola, Pikachu, Bulbasaur"
+    />
+    <meta
+      name="author"
+      content="Nicolas Gomez Marigliano, Jose Luis Gomez Marigliano, Gonzalo Gallardo, Florencia Cane"
+    />
+    <link rel="stylesheet" href="../css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>PokeProyecto</title>
-</head>
-<body>
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-danger fixed-top">
+  </head>
+  <body>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-danger fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="./index.html">
-                <h2>Pokedex</h2>
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav"
-                aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="nav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <button type="button" class="btn btn-primary">
-                            Inicio
-                        </button>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button"
-                            data-bs-toggle="dropdown">Categorias</a>
-                </ul>
-                <ul class="navbar-nav ms-lg-auto me-auto me-lg-0 mb-2 mb-lg-0">                
-                        <form class="d-flex" role="search">
-                          <input class="form-control me-2" type="search" placeholder="Buscar un Pokemon" aria-label="Search">
-                          <button class="btn btn-outline-light" type="submit"><i class="bi bi-search"></i></button>
-                        </form>                      
-                </ul>
-            </div>
+          <a class="navbar-brand" href="./index.html">
+            <h2>Pokedex</h2>
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#nav"
+            aria-controls="nav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="nav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <button type="button" class="btn btn-primary">Inicio</button>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  >Categorias</a
+                >
+              </li>
+            </ul>
+
+            <ul class="navbar-nav ms-lg-auto me-auto me-lg-0 mb-2 mb-lg-0">
+              <form class="d-flex" role="search">
+                <input
+                  class="form-control me-2"
+                  type="search"
+                  placeholder="Buscar un Pokemon"
+                  aria-label="Search"
+                />
+                <button class="btn btn-outline-light" type="submit">
+                  <i class="bi bi-search"></i>
+                </button>
+              </form>
+            </ul>
+          </div>
         </div>
-    </nav>
-</header>
-    <main>
-        <!-- eliminar el comentario -->
-        <hr>
-        <p>completar</p>
-        <!-- eliminar el comentario -->
+      </nav>
+    </header>
+    <main class="container marginmain">
+      <section></section>
+      <section class="bg-secondary">
+        <h3 class="fs-5">Evoluciones</h3>
+        <article class="">
+          <ul class="d-flex flex-row justify-content-around Columnbulbasmall">
+            <li>
+              <img class="img-fluid" src="../img/Bulba-001.png" alt="Bulba1" />
+
+              <p class="mb-0"><strong>Bulbasaur</strong> N.º001</p>
+              <button class="btn btn-outline leftbutton mb-5 mt-0 fsButton">
+                <p class="txtbutton">Planta</p>
+              </button>
+              <button class="btn btn-outline rigthbutton mb-5 mt-0 fsButton">
+                <p class="txtbutton">Veneno</p>
+              </button>
+            </li>
+            <li>
+              <img class="img-fluid" src="../img/Bulba-002.png" alt="Bulba2" />
+              <p class="mb-0"><strong>Ivisaur</strong> N.º002</p>
+              <button class="btn btn-outline leftbutton mb-5 mt-0 fsButton">
+                <p class="txtbutton">Planta</p>
+              </button>
+              <button class="btn btn-outline rigthbutton mb-5 mt-0 fsButton">
+                <p class="txtbutton">Veneno</p>
+              </button>
+            </li>
+            <li>
+              <img class="img-fluid" src="../img/Bulba-003.png" alt="Bulba3" />
+              <p class="mb-0"><strong>Venusaur</strong> N.º003</p>
+              <button class="btn btn-outline leftbutton mb-5 mt-0 fsButton">
+                <p class="txtbutton">Planta</p>
+              </button>
+              <button class="btn btn-outline rigthbutton mb-5 mt-0 fsButton">
+                <p class="txtbutton">Veneno</p>
+              </button>
+            </li>
+          </ul>
+        </article>
+      </section>
     </main>
     <footer class="bg-dark pb-2">
-     <div>     
-    <p class="text-light text-center pt-3 style-6 style-6:hover">&copy; Todos los derechos reservados</p>
-    </div>
+      <div>
+        <p class="text-light text-center pt-3 style-6 style-6:hover">
+          &copy; Todos los derechos reservados
+        </p>
+      </div>
     </footer>
-    <script src="https://kit.fontawesome.com/c45e0b44a7.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/c45e0b44a7.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="../js/bootstrap.bundle.min.js"></script>
-</body>
+  </body>
 </html>
