--- a/pages/Bulbasaur.html
+++ b/pages/Bulbasaur.html
@@ -77,8 +77,62 @@
       </nav>
     </header>
     <main class="container marginmain">
-      <section></section>
-      <section class="bg-secondary">
+      <section class="container row m-auto card">
+        <article class="d-flex justify-content-center py-2 ">
+        <h2>Bulbasasur </h2>
+       <h2 class="text-secondary px-2"> N°.001 </h2>
+         </article>
+         <section class="row">
+           <article class="col-12 col-md-5 col-lg-5 ">
+   
+             <img src="../img/Bulba-001.png" alt="Imagen de bulbasaur" width="100%">
+           
+           </article>
+   <article class="col-12 col-md-7 col-lg-7">
+   <p> Este Pokémon nace con una semilla en el lomo, que brota con el paso del tiempo.</p>
+   <div class="row bg-primary m-2 rounded text-white">
+     <H5 class="py-2" >Version</H5>
+    
+     <article class="col-6 col-md-5 col-lg-5 text-white ">
+   <p>Altura</p>
+   <p>0.7m</p>
+   <p>Peso</p>
+   <p>6.9 Kg</p>
+   <div class="pb-3">
+   <i class="bi bi-gender-male"></i>
+   <i class="bi bi-gender-female"></i>
+   </div>
+     </article>
+     <article class="col-6 col-md-7 col-lg-7 text-white" >
+   <p>Categoria</p>
+   <p>Semilla</p>
+   <p>Habilidad </p>
+   <p>Espesura</p>
+     </article>
+   
+   </div>
+   <h5>Tipo</h5>
+   <div class="badge text-wrap colorVerde" style="width: 100">
+     Planta
+   </div>
+   <div class="badge text-wrap colorVioleta" style="width: 100">
+     Veneno
+   </div>
+   <h5>Devilidad</h5>
+   <div class="badge text-wrap colorNaranja" style="width: 100">
+    Fuego
+   </div>
+   <div class="badge text-wrap colorRosa" style="width: 100">
+     Pisiquico
+   </div>
+   <div class="badge bg-secondary text-wrap" style="width: 100">
+     volador
+   </div>
+   <div class="badge bg-info text-wrap" style="width: 100">
+     Hielo
+   </div>
+         </section>
+      <section class="bg-secondary my-3">
         <h3 class="fs-5">Evoluciones</h3>
         <article class="">
           <ul class="d-flex flex-row justify-content-around Columnbulbasmall">
