agregado de licks para los pokemon a la pagina de pokemon

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                   <span class="badge colorVioleta">veneno</span>
                 </div>
                 <a
-                  href="https://www.pokemon.com/el/pokedex/"
+                  href="https://www.pokemon.com/el/pokedex/ivysaur"
                   class="btn btn-primary mt-3"
                   >Ver detalle</a
                 >
@@ -216,7 +216,7 @@
                   <span class="badge colorVioleta">veneno</span>
                 </div>
                 <a
-                  href="https://www.pokemon.com/el/pokedex/"
+                  href="https://www.pokemon.com/el/pokedex/venusaur"
                   class="btn btn-primary mt-3"
                   >Ver detalle</a
                 >
@@ -236,7 +236,7 @@
                   <span class="badge colorNaranja">Fuego</span>
                 </div>
                 <a
-                  href="https://www.pokemon.com/el/pokedex/"
+                  href="https://www.pokemon.com/el/pokedex/charmander"
                   class="btn btn-primary mt-3"
                   >Ver detalle</a
                 >
@@ -256,7 +256,7 @@
                   <span class="badge colorNaranja">Fuego</span>
                 </div>
                 <a
-                  href="https://www.pokemon.com/el/pokedex/"
+                  href="https://www.pokemon.com/el/pokedex/charmeleon"
                   class="btn btn-primary mt-3"
                   >Ver detalle</a
                 >
@@ -277,7 +277,7 @@
                   <span class="badge bg-secondary">Volador</span>
                 </div>
                 <a
-                  href="https://www.pokemon.com/el/pokedex/"
+                  href="https://www.pokemon.com/el/pokedex/charizard"
                   class="btn btn-primary mt-3"
                   >Ver detalle</a
                 >
@@ -297,7 +297,7 @@
                   <span class="badge bg-primary">Agua</span>
                 </div>
                 <a
-                  href="https://www.pokemon.com/el/pokedex/"
+                  href="https://www.pokemon.com/el/pokedex/squirtle"
                   class="btn btn-primary mt-3"
                   >Ver detalle</a
                 >
@@ -317,7 +317,7 @@
                   <span class="badge colorVerde">Bicho</span>
                 </div>
                 <a
-                  href="https://www.pokemon.com/el/pokedex/"
+                  href="https://www.pokemon.com/el/pokedex/caterpie"
                   class="btn btn-primary mt-3"
                   >Ver detalle</a
                 >
@@ -338,7 +338,7 @@
                   <span class="badge bg-secondary">Volador</span>
                 </div>
                 <a
-                  href="https://www.pokemon.com/el/pokedex/"
+                  href="https://www.pokemon.com/el/pokedex/butterfree"
                   class="btn btn-primary mt-3"
                   >Ver detalle</a
                 >
