--- a/pages/Bulbasaur.html
+++ b/pages/Bulbasaur.html
@@ -29,7 +29,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-danger fixed-top">
         <div class="container">
-          <a class="navbar-brand" href="./index.html">
+          <a class="navbar-brand" href="../index.html">
             <h2>Pokedex</h2>
           </a>
           <button
@@ -46,7 +46,7 @@
           <div class="collapse navbar-collapse" id="nav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <button type="button" class="btn btn-primary">Inicio</button>
+                <button type="button" class="btn btn-danger">Inicio</button>
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -76,7 +76,86 @@
         </div>
       </nav>
     </header>
-    <main class="container marginmain">
+    <main class="container py-5">
+      <div
+          id="carouselExampleIndicators"
+          class="carousel slide py-5"
+          data-bs-ride="true"
+        >
+          <div class="carousel-indicators">
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+              aria-label="Slide 1"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="1"
+              aria-label="Slide 2"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="2"
+              aria-label="Slide 3"
+            ></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img
+                src="../img/POKEDEX 1.jpg"
+                class="d-block w-100 Slider"
+                alt="Pokedex1"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="../img/POKEDEX 2.jpg"
+                class="d-block w-100 Slider"
+                alt="Pokedexproject"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="../img/POKEDEX 3.jfif"
+                class="d-block w-100 Slider"
+                alt="Pokedex2"
+              />
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+          <div class="row">
+            <div class="col-12 col-md-12 col-lg-4">
+            <p class="fs-5">Los datos fueron tomados de la siguinte web</p>
+          </div>
+          <div class="col-12 col-md-12 col-lg-8">
+            <a href="https://www.pokemon.com/el/pokedex/"
+              >https://www.pokemon.com/el/pokedex/</a
+            >
+          </div>
+          </div>
+        </div>
       <section class="container row m-auto card">
         <article class="d-flex justify-content-center py-2 ">
         <h2>Bulbasasur </h2>
