correccion h2  bulbasasur por bulbasaur

--- a/pages/Bulbasaur.html
+++ b/pages/Bulbasaur.html
@@ -158,7 +158,7 @@
         </div>
       <section class="container row m-auto card">
         <article class="d-flex justify-content-center py-2 ">
-        <h2>Bulbasasur </h2>
+        <h2>Bulbasaur</h2>
        <h2 class="text-secondary px-2"> N°.001 </h2>
          </article>
          <section class="row">
